better version of the game

--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -5,7 +5,7 @@
 
 <p> <%= @letters %></p>
 
-<p> <%= @longest_word %></p>
+<!-- <p> <%= @longest_word %></p> -->
 
 
 <%= link_to "New word!", new_path %>
